--- a/Mini-projectstyle.css
+++ b/Mini-projectstyle.css
@@ -1,6 +1,6 @@
 body{
     text-align: center;
-    background-color:rgb(0, 0, 33);
+    backgroun-color:rgb(147, 147, 225);
 }
 .btn{
     height: 200px;
